# BlueROV2Gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch  scenario_01_labyrinth.launch  scenario_02_ship_wreck.launch  scenario_03_sand_map.launch  scenario_04_hercules_ship.launch  test.launch
models/rotatingSonar/: rotationgSonar.sdf
models/uuv_bluerov2_heavy/: uuv_bluerov2_heavy.sdf
src/: publishingSonarScanComplete.cpp  publishingSonarScanCompleteNew.cpp  rotatingSonarControlPlugin.cc  simulationDVL.cpp
src/evaluationHelper/: gazeboState2Position.cpp
